@@ -1,5 +1,5 @@
 
-game: load_image.ml g_test.ml
+game: load_image.ml draw_screen.ml g_test.ml
 	ocamlfind ocamlopt -package graphics,unix,imagelib -linkpkg -o $@ $^
 
 clean:
